Begin Straps language server implementation

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,7 +3,8 @@
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"noImplicitAny": true,
-		"noImplicitReturns": true,		
+		"noImplicitReturns": true,
+		"strictNullChecks": true,
 		"target": "es6",
 		"module": "commonjs",
 		"moduleResolution": "node",
