--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
 		"watch:server": "cd server && npm run installServer && cd .. && tsc -w -p server/tsconfig.json"
 	},
 	"devDependencies": {
+		"@types/js-yaml": "^3.11.1",
 		"@types/mocha": "^2.2.48",
 		"@types/node": "^6.0.101",
 		"typescript": "^2.7.2"
+	},
+	"dependencies": {
+		"js-yaml": "^3.11.0"
 	}
 }
