--- a/client/package.json
+++ b/client/package.json
@@ -43,17 +43,29 @@
 				}
 			}
 		},
-		"languages": [{
-			"id": "straps",
-			"aliases": ["Straps", "straps"],
-			"extensions": [".straps",".str",".v10",".generic"],
-			"configuration": "./language-configuration.json"
-		}],
-		"grammars": [{
-			"language": "straps",
-			"scopeName": "source.straps",
-			"path": "./syntaxes/straps.tmLanguage.json"
-		}]
+		"languages": [
+			{
+				"id": "straps",
+				"aliases": [
+					"Straps",
+					"straps"
+				],
+				"extensions": [
+					".straps",
+					".str",
+					".v10",
+					".generic"
+				],
+				"configuration": "./language-configuration.json"
+			}
+		],
+		"grammars": [
+			{
+				"language": "straps",
+				"scopeName": "source.straps",
+				"path": "./syntaxes/straps.tmLanguage.json"
+			}
+		]
 	},
 	"scripts": {
 		"vscode:prepublish": "tsc -p ./",
@@ -64,6 +76,7 @@
 	},
 	"dependencies": {
 		"vscode": "^1.1.17",
-		"vscode-languageclient": "^4.1.3"
+		"vscode-languageclient": "^4.1.3",
+		"js-yaml": "^3.11.0"
 	}
 }
